--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,38 +10,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="\n
-        ─────────────────────────────▄██▄\n
-        ─────────────────────────────▀███\n
-        ────────────────────────────────█\n
-        ───────────────▄▄▄▄▄────────────█\n
-        ──────────────▀▄────▀▄──────────█\n
-        ──────────▄▀▀▀▄─█▄▄▄▄█▄▄─▄▀▀▀▄──█\n
-        ─────────█──▄──█────────█───▄─█─█\n
-        ─────────▀▄───▄▀────────▀▄───▄▀─█\n
-        ──────────█▀▀▀────────────▀▀▀─█─█\n
-        ──────────█───────────────────█─█\n
-        ▄▀▄▄▀▄────█──▄█▀█▀█▀█▀█▀█▄────█─█\n
-        █▒▒▒▒█────█──█████████████▄───█─█\n
-        █▒▒▒▒█────█──██████████████▄──█─█\n
-        █▒▒▒▒█────█───██████████████▄─█─█\n
-        █▒▒▒▒█────█────██████████████─█─█\n
-        █▒▒▒▒█────█───██████████████▀─█─█\n
-        █▒▒▒▒█───██───██████████████──█─█\n
-        ▀████▀──██▀█──█████████████▀──█▄█\n
-        ──██───██──▀█──█▄█▄█▄█▄█▄█▀──▄█▀\n
-        ──██──██────▀█─────────────▄▀▓█\n
-        ──██─██──────▀█▀▄▄▄▄▄▄▄▄▄▀▀▓▓▓█\n
-        ──████────────█▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓█\n
-        ──███─────────█▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓█\n
-        ──██──────────█▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓█\n
-        ──██──────────█▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓█\n
-        ──██─────────▐█▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓█\n
-        ──██────────▐█▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓█\n
-        ──██───────▐█▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓█▌\n
-        ──██──────▐█▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓█▌\n
-        ──██─────▐█▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓█▌\n
-        ──██────▐█▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓█▌\n"
+        android:text="@string/texto"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
